--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Shows Streaming</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">TVShows</h1>
+            <h1 class="logo">ShowPlay</h1>
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shows.html">Shows</a></li>
-                    <li><a href="#categories">Categories</a></li>
+                    <li><a href="movies.html">Movies</a></li>
+                    <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -25,7 +27,7 @@
     <section class="hero">
         <div class="container">
             
-            <h2>Welcome to TVShows</h2>
+            <h2>Welcome to ShowPlay</h2>
             <p>Stream your favorite TV shows anytime, anywhere.</p>
         </div>
     </section>
@@ -47,18 +49,62 @@
                     <img src="images/3.jpg" alt="Show 3">
                     <h3>The Great Kapil Show</h3>
                 </div>
-                <div class="show">
-                    <img src="images/4.crdownload" alt="Show 4">
-                    <h3>Latest Movies</h3>
+                <div class="show"> <a href="movies.html">
+                    <img src="images/4.crdownload" alt="Show 4"> 
+                    <h3>Latest Movies</h3></a>
+                </div>
+                <div class="show"> 
+                    <img src="images/9.webp" alt="Show 4"> 
+                    <h3>Web Series </h3>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 TVShows. All rights reserved.</p>
-        </div>
-    </footer>
+
+  <footer class="footer">
+  	 <div class="container">
+  	 	<div class="row">
+  	 		<div class="footer-col">
+  	 			<h4>Shows</h4>
+  	 			<ul>
+  	 				<li><a href="tmkoc.html">Tarrak Mehta ka Ooltha Chashma</a></li>
+  	 				<li><a href="baalveer.html">Baalveer </a></li>
+  	 				<li><a href="#">The Great Indian Kapil Show</a></li>
+  	 				<li><a href="#">Wagle Ki Duniya</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Movies</h4>
+  	 			<ul>
+  	 				<li><a href="#">Hum Do Humare Do</a></li>
+  	 				<li><a href="#">Golmaal</a></li>
+  	 				<li><a href="#">Jawan</a></li>
+  	 				<li><a href="#">Pathan</a></li>
+  	 				<li><a href="#">Varisu</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Web Series</h4>
+  	 			<ul>
+  	 				<li><a href="#">Panchayat S3</a></li>
+  	 				<li><a href="#">Bahubali </a></li>
+  	 				<li><a href="#">Family Man</a></li>
+  	 				<li><a href="#">Nam Ni Yad</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Follow us</h4>
+  	 			<div class="social-links">
+  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="#"><i class="fab fa-telegram"></i></a>
+  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
+  	 			</div>
+  	 		</div>
+  	 	</div>
+  	 </div>
+  </footer>
+
 </body>
 </html>
