--- a/tmkoc.html
+++ b/tmkoc.html
@@ -9,11 +9,11 @@
 <nav>
     <ul id="page-nav">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="page1.html">TMKOC</a></li>
+        <li><a href="tmkoc.html">TMKOC</a></li>
         <li><a href="#page2">BALVEER</a></li>
         <li><a href="#page3">WAGLE KI DUNIYA</a></li>
         <li><a href="#page4">ZEE</a></li>
-        <li><a href="#page5">MOVIES</a></li>
+        <li><a href="movies.html">MOVIES</a></li>
     </ul>
 </nav>
 <body>
