--- a/baalveer.html
+++ b/baalveer.html
@@ -9,7 +9,7 @@
 <nav>
     <ul id="page-nav">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="page1.html">TMKOC</a></li>
+        <li><a href="tmkoc.html">TMKOC</a></li>
         <li><a href="#page2">BALVEER</a></li>
         <li><a href="#page3">WAGLE KI DUNIYA</a></li>
         <li><a href="#page4">ZEE</a></li>
@@ -21,7 +21,7 @@
         <div class="video-wrapper">
             <h2>Episode 1</h2>
             
-            <iframe width="560" height="315" poster = "images/4.jpg" src="https://www.youtube-nocookie.com/embed/CkIuakwLq3U?si=e-PNAUX-MIPaWTBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-wrapper">
             <h2>Video Title 2</h2>
