--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video Gallery</title>
     <link rel="stylesheet" href="movies.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
