privacy policy add

--- a/baalveer.html
+++ b/baalveer.html
@@ -16,6 +16,7 @@
         <li><a href="#page3">WAGLE KI DUNIYA</a></li>
         <li><a href="#page4">ZEE</a></li>
         <li><a href="#page5">MOVIES</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
 </nav>
 <body>
