--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+   <!-- <header>
         <h1 ><img class="logo">ShowPlay  </h1>
         <input type="checkbox" id="mobile-icon">
         <label for="mobile-icon" class="toggle"><span class="hamburger-icon"></span></label>
@@ -51,8 +51,8 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
-      </header>
-    <!--<header class="header">
+      </header>-->
+    <header class="header">
         <div class="container">
             <h1 class="logo">ShowPlay</h1>
             <nav class="navbar">
@@ -63,10 +63,12 @@
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+
+                    <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </nav>
         </div>
-    </header>-->
+    </header>
 
     <section class="hero">
         <div class="container">
