or bhi adds lgyi

--- a/tmkoc.html
+++ b/tmkoc.html
@@ -16,6 +16,7 @@
         <li><a href="#page3">WAGLE KI DUNIYA</a></li>
         <li><a href="#page4">ZEE</a></li>
         <li><a href="movies.html">MOVIES</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
 </nav>
 <body>
@@ -46,5 +47,17 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID20" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<!-- Square Banner 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="8083101934"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
