--- a/baalveer.html
+++ b/baalveer.html
@@ -48,5 +48,17 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID20" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<!-- Square Banner 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="8083101934"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
