--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,17 @@
         <p>Stay updated with the latest news and announcements by joining our Telegram channel.</p>
         <a href="https://t.me/sonysabshowslatest" class="telegram-button" target="_blank">Join Telegram Channel</a>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<!-- Square Banner 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="8083101934"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
