--- a/index.html
+++ b/index.html
@@ -99,10 +99,54 @@
                     <img src="images/4.crdownload" alt="Show 4"> 
                     <h3>Latest Movies</h3></a>
                 </div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6z+f0-v-50+c6"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="7476150160"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <div class="show"> 
                     <img src="images/9.webp" alt="Show 4"> 
                     <h3>Web Series </h3>
                 </div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6y+f0-v-50+c6"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="7871348942"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6z+f0-v-50+c6"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="7476150160"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6y+f0-v-50+c6"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="7871348942"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
             </div>
         </div>
     </section>
@@ -151,6 +195,17 @@
   	 	</div>
   	 </div>
   </footer>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+  crossorigin="anonymous"></script>
+<!-- Square Banner 1 -->
+<ins class="adsbygoogle"
+  style="display:block"
+  data-ad-client="ca-pub-7993259194717520"
+  data-ad-slot="8083101934"
+  data-ad-format="auto"
+  data-full-width-responsive="true"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
