--- a/shows.html
+++ b/shows.html
@@ -19,6 +19,8 @@
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+
+                    <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,5 +49,17 @@
             <p>&copy; 2024 TVShows. All rights reserved.</p>
         </div>
     </footer>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
+     crossorigin="anonymous"></script>
+<!-- Square Banner 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7993259194717520"
+     data-ad-slot="8083101934"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
