--- a/categories.html
+++ b/categories.html
@@ -17,8 +17,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shows.html">Shows</a></li>
                     <li><a href="categories.html" class="active">Categories</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="movies.html">Movies</a></li>
+                    <li><a href="webseries.html">WebSeries</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,6 +36,11 @@
                 <h3>Movies</h3>
                 <p>Discover a wide range of movies for every mood and occasion.</p>
                 <a href="movies.html" class="explore-button">Explore Movies</a>
+            </div>
+            <div class="category">
+                <h3>WebSeries</h3>
+                <p>Discover a wide range of webseries for every mood and occasion.</p>
+                <a href="webseries.html" class="explore-button">Explore WebSeries</a>
             </div>
             <!-- Add more categories as needed -->
         </div>
