--- a/privacy.html
+++ b/privacy.html
@@ -51,9 +51,9 @@
                     <li><a href="shows.html">Shows</a></li>
                     <li><a href="movies.html">Movies</a></li>
                     <li><a href="categories.html">Categories</a></li>
-                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
+                    <li><a href="privacy.html" class="active">Privacy Policy</a></li>
                 </ul>
             </nav>
         </div>
