--- a/contact.html
+++ b/contact.html
@@ -10,23 +10,20 @@
 </head>
 <header class="header">
     <div class="container">
-        <h1 class="logo">TVShows</h1>
+        <h1 class="logo">Contact</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shows.html">Shows</a></li>
-                <li><a href="#categories">Categories</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Back</a></li>
+        
             </ul>
         </nav>
     </div>
 </header>
 <body>
     <div class="container">
-        <h1>Join Our Telegram Channel</h1>
-        <p>Stay updated with the latest news and announcements by joining our Telegram channel.</p>
-        <a href="https://t.me/sonysabshowslatest" class="telegram-button" target="_blank">Join Telegram Channel</a>
+        <h1>Connect via Telegram </h1>
+        <p>Feel free to contact us we replay As Soon As Possible</p>
+        <a href="https://t.me/mohitjangra2903" class="telegram-button" target="_blank">Join Telegram</a>
     </div>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
      crossorigin="anonymous"></script>
