--- a/index.html
+++ b/index.html
@@ -83,21 +83,22 @@
         <div class="container">
             <h2>Featured Shows,Movies & Webseries</h2>
             <div class="shows-grid">
-                <div class="show"> <a href="tmkoc2.html">
+                <div class="show"> <a href="tmkoc.html" class ="a1">
                     <img src="images/1.jpg" class="hover-image">
                     <h3>Tarrak Mehta Ka ooltha Chashma</h3>
                 </a>
                 </div>
-                <div class="show"> <a href="baalveer.html">
-                    <img src="images/2.jpg" alt="Show 2">
+                <div class="show"> <a href="baalveer.html" class="a1">
+                    <img src="images/2.jpg"  class="hover-image" alt="Show 2">
                     <h3>Baalveer Season 4</h3></a>
                 </div>
                 <div class="show">
-                    <img src="images/3.jpg" alt="Show 3">
-                    <h3>The Great Kapil Show</h3>
+                  <a href="kapil.html"class ="a1">
+                    <img src="images/3.jpg" class="hover-image" alt="Show 3">
+                    <h3>The Great Kapil Show</h3></a>
                 </div>
-                <div class="show"> <a href="movies.html">
-                    <img src="images/4.crdownload" alt="Show 4"> 
+                <div class="show"> <a href="movies.html"class ="a1">
+                    <img src="images/4.crdownload"  class="hover-image" alt="Show 4"> 
                     <h3>Latest Movies</h3></a>
                 </div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
@@ -111,8 +112,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-                <div class="show"> <a href="webseries.html">
-                    <img src="images/9.webp" alt="Show 4"> 
+                <div class="show"> <a href="webseries.html"class="a1">
+                    <img src="images/web2.png"  class="hover-image" alt="Show 4"> 
                     <h3>Web Series </h3></a>
                 </div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
@@ -159,9 +160,9 @@
   	 		<div class="footer-col">
   	 			<h4>Shows</h4>
   	 			<ul>
-  	 				<li><a href="tmkoc2.html">Tarrak Mehta ka Ooltha Chashma</a></li>
+  	 				<li><a href="tmkoc.html">Tarrak Mehta ka Ooltha Chashma</a></li>
   	 				<li><a href="baalveer.html">Baalveer </a></li>
-  	 				<li><a href="#">The Great Indian Kapil Show</a></li>
+  	 				<li><a href="kapil.html">The Great Indian Kapil Show</a></li>
   	 				<li><a href="#">Wagle Ki Duniya</a></li>
   	 			</ul>
   	 		</div>
@@ -192,6 +193,12 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Sponser</a></li>
             <li><a href="https://t.me/sonysabshowslatest">Telegram</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Special things Just for You</h4>
+          <ul>
+            <li><a href="request.html">Request Your favorite Movies and Shows</a></li>
           </ul>
         </div>
   	 		<div class="footer-col">
