--- a/kapil.html
+++ b/kapil.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tmkocr</title>
-    <link rel="stylesheet" href="tmkoc.css">
+    <title>Kapil Show</title>
+    <link rel="stylesheet" href="kapil.css">
 </head>
 <body>
     <header>
-        <h1>Tmkoc</h1>
+        <h2>The Great Indian Kapil Show</h2>
         <nav>
             <input type="checkbox" id="menu-toggle">
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -25,11 +25,12 @@
             <!-- Repeat this block for each video -->
         
             <div class="video-item">
+                 <!-- embeded code -->
+
                 
-                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Taarak_Mehta_Ka_Ooltah_Chashmah_Season_41_Episode_4099_Anjali_Ka:b?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
 
                 <div class="video-info">
-                    <h2 class="video-title">Tmkoc</h2>
+                    <h2 class="video-title">Netflix Kapil Show Ep 1</h2>
                     <p class="video-date">June 1, 2024</p>
                     <a href="download_link_1" class="download-button">Download</a>
                 </div>
