--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tmkocr</title>
-    <link rel="stylesheet" href="tmkoc.css">
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <header>
