--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <div class="container">
             <h2>Featured Shows,Movies & Webseries</h2>
             <div class="shows-grid">
+              <div class="show"> <a href="today.html" class="a1">
+                <img src="images/today2.jpg"  class="hover-image" alt="Show 2">
+                <h3>Today All Episodes</h3></a>
+            </div>
                 <div class="show"> <a href="tmkoc.html" class ="a1">
                     <img src="images/1.jpg" class="hover-image">
                     <h3>Tarrak Mehta Ka ooltha Chashma</h3>
@@ -112,10 +116,12 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
                 <div class="show"> <a href="webseries.html"class="a1">
                     <img src="images/web2.png"  class="hover-image" alt="Show 4"> 
                     <h3>Web Series </h3></a>
                 </div>
+                
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
