--- a/tmkoc.html
+++ b/tmkoc.html
@@ -30,8 +30,8 @@
 
                 <div class="video-info">
                     <h2 class="video-title">Tmkoc</h2>
-                    <p class="video-date">June 1, 2024</p>
-                    <a href="download_link_1" class="download-button">Download</a>
+                    <p class="video-date">May 31, 2024</p>
+                    <a href="https://dlupload.com/filedetail/1989033823" class="download-button">Download</a>
                 </div>
             </div>
             
