--- a/request.html
+++ b/request.html
@@ -11,7 +11,7 @@
         <h1>Movie/Show Request Form</h1>
     </header>
     <section class="form-container">
-        <form action="#" method="post">
+        <form action="#" method="post" data-netlify="true">
             <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
