--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
         <h1>Privacy Policy</h1>
         <p>This privacy policy applies to our website (https://showplay.netlify.app/).
             All Shows and Movies are creeated by own or buy from the Creater 
-            all content is safe for children
+            all content is safe for children NOTE - IF anybody found content uploaded in this website is yours or copyrighted then feel free to contact we will remove the content after verification
         </p>
 
         <h2>Information We Collect</h2>
