--- a/today.html
+++ b/today.html
@@ -31,10 +31,11 @@
             <div class="episode">
                 <h2>Episode 4100 : Taarak_Mehta_Ka_Ooltah_Chashmah</h2>
                 <p>Date: June 1, 2024</p>
-                
+                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Taarak_Mehta_Ka_Ooltah_Chashmah_Season_41_Episode_4100_Abdul_Ki:5?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
                 <div class="buttons">
                     <button class="watch-btn">Episode Time : 8:30 PM</button>
-                    <button class="download-btn">Download</button>
+                    <a href="https://dlupload.com/filedetail/668183564">
+                    <button class="download-btn">Download</button></a>
                 </div>
             </div>
             <div class="episode">
