--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
      crossorigin="anonymous"></script>
+     <script type='text/javascript' src='//pl23462610.highcpmgate.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
    <!-- <header>
