add lga di  guys trial k bad first time

--- a/about.html
+++ b/about.html
@@ -25,7 +25,17 @@
             </nav>
         </div>
     </header>
-
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '6776d61603e3b474338b4996d79df74e',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
+    
     <section class="about-us">
         <div class="container">
             <h2>About Us</h2>
@@ -45,17 +55,25 @@
             <p>&copy; 2024 TVShows & Movies. All rights reserved.</p>
         </div>
     </footer>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
-     crossorigin="anonymous"></script>
-<!-- Square Banner 1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7993259194717520"
-     data-ad-slot="8083101934"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
 </body>
 </html>
