--- a/categories.html
+++ b/categories.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Shows & Movies - Categories</title>
     <link rel="stylesheet" href="categories.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
-     crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <header class="header">
@@ -45,23 +44,31 @@
             <!-- Add more categories as needed -->
         </div>
     </section>
-
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 TVShows. All rights reserved.</p>
         </div>
     </footer>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
-     crossorigin="anonymous"></script>
-<!-- Square Banner 1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7993259194717520"
-     data-ad-slot="8083101934"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    
 </body>
 </html>
