--- a/kapil.html
+++ b/kapil.html
@@ -42,5 +42,16 @@
             <!-- Continue repeating for all videos -->
         </div>
     </main>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+            'format' : 'iframe',
+            'height' : 60,
+            'width' : 468,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
+    
 </body>
 </html>
