--- a/shows.html
+++ b/shows.html
@@ -33,6 +33,16 @@
                 </div>
             </div>
             <!-- Repeat the block up to desired number of shows -->
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <div class="show-item">
                 <img src="images/2.jpg" alt="Show 2" class="show-image">
                 <div class="show-info">
@@ -41,6 +51,16 @@
                     <button class="channel-button">Watch Now</button></a>
                 </div>
             </div>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <div class="show-item">
                 <img src="images/3.jpg" alt="Show 2" class="show-image">
                 <div class="show-info">
@@ -51,7 +71,16 @@
             </div>
             <!-- Continue repeating for all shows -->
         </div>
-    
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '6776d61603e3b474338b4996d79df74e',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
     </main>
 </body>
 </html>
