--- a/webseries.html
+++ b/webseries.html
@@ -22,6 +22,16 @@
 
     <main>
         <section class="gallery">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             
             <!-- Repeat similar blocks for each show -->
             <div class="show-item">
@@ -32,6 +42,16 @@
                     <p>Release Date: 31 May, 2024</p>
                 </div>
             </div>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <div class="show-item">
                 <img src="images/coming soon.avif" alt="Show 2">
                 <div class="show-details">
@@ -39,6 +59,16 @@
                     <p>Release Date: upcoming</p>
                 </div>
             </div>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <!-- ... more show items up to 20 ... -->
         </section>
     </main>
