--- a/movies.html
+++ b/movies.html
@@ -40,17 +40,17 @@
                 </div>
             </div>
             <!-- Add more image-card divs here -->
-            <!-- Example for the next image card
+            <!-- Example for the next image card-->
             <div class="image-card">
-                <img src="https://via.placeholder.com/150" alt="Image 2">
-                <h3>Image Title 2</h3>
+                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Yodha.2024.1080p.WEBRip.x264.AAC5.1--YTS.MX-:a?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
+                <h3>Yodha 2024 Hindi HD</h3>
                 <div class="buttons">
-                    <a href="#" class="btn">Download</a>
+                    <a href="#" class="btn">Download NA</a>
                     <a href="#" class="btn">Watch Online</a>
                 </div>
-            </div> -->
+            </div> 
             <!-- Continue up to 20 images -->
-        </div>
+        
         <script type="text/javascript">
             atOptions = {
                 'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
@@ -61,6 +61,7 @@
             };
         </script>
         <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
+    </div>
     </main>
 </body>
 </html>
